# cheapo_website

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  app  fly.toml  pyproject.toml  render.yaml  requirements.txt  workspace.code-workspace
etc/: litefs.yml
migrations/versions/: 11f0efe169a2_.py  71cff8962617_.py
scripts/: app
server/: __init__.py  bp_auth.py  bp_inside.py  bp_maintenance.py  bp_outside.py  create_app.py  db.py  default_settings.py
server/static/: style.css
server/templates/: base.html  dashboard.html
server/templates/auth/: login.html  register.html
server/templates/inside/: dashboard.html
server/templates/maintenance/: index.html
server/templates/outside/: index.html
